# DES_Head-Unit

./: .gitignore  CMakeLists.txt  FILESTRUCTURE.md  README.md  flash-sd-card.sh  flash-wic.sh
HeadUnit/: CMakeLists.txt  app_lifecycle_manager.sh  applications.json  dbus_interface.sh  dbus_send_helper.sh  headUnit  launch_app.sh  start_headunit.sh  theme_client.cpp  theme_client.h  view_logs.sh
HeadUnit/ApplicationFrameworkManager/: CMakeLists.txt  application_framework_manager.cpp  application_framework_manager.h  main.cpp
HeadUnit/GearSelector/: .qmlls.ini  CMakeLists.txt  GearButton.qml  Main.qml  Main_Test.qml  gs_handler.cpp  gs_handler.h  main.cpp  qml.qrc
HeadUnit/HomePage/: CMakeLists.txt  Main.qml  MapTile.qml  main.cpp  resources.qrc
HeadUnit/IVI_Compositor/: CMakeLists.txt  Main.qml  dbus_manager.cpp  dbus_manager.h  ivi_compositor.cpp  ivi_compositor.h  main.cpp  qml.qrc  scriptexecutor.h
HeadUnit/IVI_Compositor(OLD)/: LeftPanel.qml  RightPanel.qml  ivi_compositor.h
HeadUnit/IVI_Compositor/qml/: AppLifeCycleManager.qml  AppSwitcher.qml  CompositorWindow.qml  GlobalStateManager.qml  HomeView.qml  LeftPanel.qml  Main.qml  MapTile.qml  RightPanel.qml  SurfaceManager.qml
HeadUnit/MediaPlayer/: CMakeLists.txt  Main.qml  OldMain.qml  main.cpp  mp_handler.cpp  mp_handler.h  resources.qrc
HeadUnit/MediaPlayer/qml/: Main.qml  MediaControls.qml  MediaDisplay.qml  MediaProgressBar.qml  ProgressBar.qml  SourceSelector.qml  USBPlaylist.qml  VolumeControl.qml  YouTubeView.qml
HeadUnit/NavigationGM/: CMakeLists.txt  KeyButton.qml  Main.qml  MapView.qml  SearchBar.qml  VirtualKeyboard.qml  main.cpp
HeadUnit/PythonScripts/: Dashboard_Service_HeadUnit_IC.py  Mock_DBUS.py  mediaplayer_service.py  settings_service.py  theme_service.py
HeadUnit/SettingsApp/: CMakeLists.txt  bluetoothmanager.cpp  bluetoothmanager.h  dbus_handler.cpp  dbus_handler.h  main.cpp  qml.qrc  settingsmanager.cpp  settingsmanager.h  wifimanager.cpp  wifimanager.h
HeadUnit/SettingsApp/qml/: BluetoothSettings.qml  Main.qml  MenuButton.qml  SettingsMenu.qml  SoundSettings.qml  TimeSettings.qml  WiFiSettings.qml
HeadUnit/Shell Scripts/: start_headunit.sh
HeadUnit/ThemeColor/: CMakeLists.txt  ColorUtils.js  ColorWheel.qml  Main.qml  PreviewButton.qml  ThemeColorClient.cpp  main.cpp  qmldir
HeadUnit/applications/: GearSelector  HomePage  MediaPlayer  Settings  ThemeColor  appNavigationGM
HeadUnit/apps/: CMakeLists.txt
HeadUnit/apps/ambient-lighting/: AmbientLighting.qml  main.cpp
HeadUnit/apps/gear-selector/: GearSelector.qml  main.cpp
HeadUnit/apps/head-unit/: Main.qml  TopBar.qml  main.cpp
HeadUnit/apps/media-player/: MediaPlayer.qml  main.cpp
HeadUnit/apps/resources/: qml.qrc
HeadUnit/hmi/: qml.qrc
HeadUnit/hmi/qml/: Main.qml
HeadUnit/services/: CMakeLists.txt
HeadUnit/services/media-service/: main.cpp
HeadUnit/src/: CMakeLists.txt
HeadUnit/src/applications/head-unit/: CMakeLists.txt
HeadUnit/src/head-unit/: CMakeLists.txt  MainCompositor.qml  main.cpp
HeadUnit/src/media-player/: CMakeLists.txt  MediaPlayer.qml  media-main.cpp
src/: CMakeLists.txt
src/applications/: CMakeLists.txt
src/applications/head-unit/: main.cpp
src/hmi/: CMakeLists.txt
src/hmi/qml/components/: Navigation.qml
yocto/: .gitkeep  readme.md
yocto/layers/meta-headunit/conf/: layer.conf
yocto/layers/meta-headunit/recipes-apps/application-framework-manager/: application-framework-manager_1.0.bb
yocto/layers/meta-headunit/recipes-apps/des-piracer-vehicles/: des-piracer-vehicles_1.0.bb
yocto/layers/meta-headunit/recipes-apps/gearselector/: gearselector_1.0.bb
yocto/layers/meta-headunit/recipes-apps/instrument-cluster/: instrument-cluster_1.0.bb
yocto/layers/meta-headunit/recipes-apps/ivi-compositor/: ivi-compositor_1.0.bb
yocto/layers/meta-headunit/recipes-apps/mediaplayer/: mediaplayer_1.0.bb
yocto/layers/meta-headunit/recipes-apps/mock-dashboard-service/: mock-dashboard-service_1.0.bb
yocto/layers/meta-headunit/recipes-apps/mock-dbus/: mock-dbus_1.0.bb
yocto/layers/meta-headunit/recipes-apps/rc-piracer/: rc-piracer_1.0.bb
yocto/layers/meta-headunit/recipes-apps/themecolor/: themecolor_1.0.bb
yocto/layers/meta-headunit/recipes-bsp/bootfiles/: rpi-config_git.bbappend
yocto/layers/meta-headunit/recipes-connectivity/can-setup/: can-setup_1.0.bb
yocto/layers/meta-headunit/recipes-connectivity/connman-provision/: connman-provision.bb
yocto/layers/meta-headunit/recipes-connectivity/wpa-supplicant/: wpa-supplicant_%.bbappend
yocto/layers/meta-headunit/recipes-core/base-files/: base-files_%.bbappend
yocto/layers/meta-headunit/recipes-core/dbus/: dbus_%.bbappend
yocto/layers/meta-headunit/recipes-core/glib-2.0/: glib-2.0_%.bbappend
yocto/layers/meta-headunit/recipes-core/headunit-startup/: headunit-startup_1.0.bb
yocto/layers/meta-headunit/recipes-core/images/: headunit-image.bb  headunit-image.bb.backup
yocto/layers/meta-headunit/recipes-core/packagegroups/: packagegroup-headunit-apps.bb  packagegroup-headunit-core.bb  packagegroup-headunit-core.bb.backup  packagegroup-headunit-fonts.bb  packagegroup-headunit-graphics.bb  packagegroup-headunit-input.bb  packagegroup-headunit-qt6.bb  packagegroup-headunit-system.bb
yocto/layers/meta-headunit/recipes-core/systemd/: boot-animation_1.0.bb  dbus-session_1.0.bb  systemd-autologin_1.0.bb  systemd-tmpfiles_1.0.bb  systemd_%.bbappend
yocto/layers/meta-headunit/recipes-core/udev/: udev-extraconf_1.1.bbappend
yocto/layers/meta-headunit/recipes-devtools/python/: adafruit-blinka_git.bb  adafruit-circuitpython-busdevice_git.bb  adafruit-circuitpython-ina219_git.bb  adafruit-circuitpython-register_git.bb  adafruit-circuitpython-ssd1306_git.bb  adafruit-framebuf_git.bb  adafruit-platformdetect_git.bb  adafruit-pureio_git.bb  python3-adafruit-pca9685_3.4.2.bb  python3-piracer-py_0.2.1.bb  python3-pygame_2.6.1.bb  python3-rpi-gpio_0.7.1.bb
yocto/layers/meta-headunit/recipes-graphics/fontconfig/: fontconfig_%.bbappend
yocto/layers/meta-headunit/recipes-graphics/fonts/: dejavu-fonts_2.37.bb
(+93 files in other folders)
